add some api message