@@ -190,13 +190,13 @@ public class QuestionServiceImpl implements QuestionService {
     @Cacheable(value = "toeicPart", keyGenerator = "toeicPartKeyGenerator")
     public JsonNode getQuestionsByPartIds(List<Long> partIds) {
         if (partIds == null || partIds.isEmpty()) {
-            throw new IllegalArgumentException("partIds must not be empty");
+            throw new ResourceInvalidException("partIds must not be empty");
         }
 
         // Kiểm tra tất cả part thuộc cùng 1 đề thi
         List<Long> examIds = examPartRepository.findDistinctExamIdsByPartIds(partIds);
         if (examIds.size() != 1) {
-            throw new IllegalArgumentException("All partIds must belong to the same exam");
+            throw new ResourceInvalidException("All partIds must belong to the same exam");
         }
 
         Long[] partIdArray = partIds.toArray(new Long[0]);
@@ -217,7 +217,7 @@ public class QuestionServiceImpl implements QuestionService {
         // Step 2: Get all Questions with Options for this part
         List<Question> allQuestionsWithOptions = groups.stream()
                 .flatMap(group -> questionRepository.findByGroupGroupIdWithOptions(group.getGroupId()).stream())
-                .collect(Collectors.toList());
+                .toList();
 
         // Step 3: Group options by question ID
         Map<Long, List<QuestionOption>> optionsByQuestionId = allQuestionsWithOptions.stream()
@@ -258,7 +258,7 @@ public class QuestionServiceImpl implements QuestionService {
         try {
             return objectMapper.readTree(json);
         } catch (JsonProcessingException e) {
-            throw new RuntimeException("Invalid JSON from DB", e);
+            throw new RuntimeException("Invalid JSON: ", e);
         }
     }
 
@@ -299,9 +299,6 @@ public class QuestionServiceImpl implements QuestionService {
                 .collect(Collectors.toList());   // <— mutable
 
         question.setOptions(opts); // set inverse side
-
-        // Note: We need to add options to Question entity if there's a relationship
-        // This depends on your Question entity structure
 
         return question;
     }
